<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Chrism Word Cards</string>
    <string name="app_name_no_chrism">   Word Cards</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_text">No folders created. Click on the + button to add a folder</string>
    <string name="title_activity_word_card">Word cards</string>
    <string name="empty_view_word_cards">No word cards created for this folder. Click on the + button to add a word card</string>
    <string name="create_folder">Create folder</string>
    <string name="folder_name_hint">Folder name</string>
    <string name="ok_dialog">OK</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="word_name_hint">Word name</string>
    <string name="word_definition_hint">Definition</string>
    <string name="search_word">Search word</string>
    <string name="search_result_title">Search result: \"<xliff:g id="title">%s</xliff:g>\"</string>
    <string name="delete_folder">Delete folder \"<xliff:g id="folderName">%s</xliff:g>\"?</string>
    <string name="delete">Delete</string>
    <string name="folder_deleted">Folder deleted \"<xliff:g id="folderName">%s</xliff:g>\"</string>
    <string name="delete_word_dialog">Delete word card \"<xliff:g id="wordName">%s</xliff:g>\"?</string>
    <string name="edit_folder_header">Edit folder</string>
    <string name="create_folder_header">Create folder</string>
    <string name="dialog_edit_word_card">Edit word card</string>
    <string name="dialog_create_word_card">Create word card</string>
    <string name="empty_folder_name_check">Folder name cannot be empty</string>
    <string name="empty_word_card_name_check">Word card name cannot be empty</string>
    <string name="empty_word_card_text_check">Word card text cannot be empty</string>
    <string name="folder">Folder</string>
    <string name="adBannerUnitIdTest">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adBannerUnitId">ca-app-pub-1334181107218958/8496650005</string>
    <string name="billing_encoded_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAxPB4euhHyShikxl2lWYbgqrjnFKlQC9WygCMvRIqEVKpm+/bY46s1LzJ1TJ6RJpszGOjczgOTV+dj0Im9l5wcUmMg7wW2pWrvWcD5vAmGARbMrhX8ys7ADoM/kJJMqb657m6XYTvQ6pcn8hHjxkugn5A0W0MMSqlTm/FQApFMagOF6RFBxlABpUM7P2DT80hmmYCu6O9IjE3jSMfj+L3bE2UABJHwR3x6cSuqfx9qxrOjUp0ClG+1ZmhHkGbKY8pghhko+JApTIOxBs5rsE1eB6otmEw3sJUEkfsfSw8gT3CV0Fuosjt/vxLg3N3jW+UPva9pSr5V/KGeRCK0KN4UwIDAQAB</string>
    <string name="premium_product_id">com.chrismsolutions.chrismdefinitions.premium </string>
    <string name="premium_product_id_test_purchased">android.test.purchased</string>
    <string name="premium_product_id_test_canceled">android.test.canceled</string>
    <string name="premium_product_id_test_refunded">android.test.refunded</string>
    <string name="folder_name_dialog">Folder name:</string>
    <string name="remove_ads">Remove ads</string>
    <string name="word_name_card">Word name</string>
    <string name="word_definition_card">Word definition</string>
    <string name="menu_create_test">Test yourself</string>
    <string name="failure_content_desc">Press to acknowledge failure</string>
    <string name="success_content_desc">Press to acknowledge correctness</string>
    <string name="create_test_header">Create Test</string>
    <string name="choose_folder_test">Choose folder(s)</string>
    <string name="start_test">Start test</string>
    <string name="create_test_number_start">Create test with </string>
    <string name="create_test_number_middle"> out of a total of </string>
    <string name="number_larger_than_available">Cannot choose more than available</string>
    <string name="folder_checked_check">Choose at least 1 folder</string>
    <string name="choose_number_words_check">Choose how many words you wish to draw</string>
    <string name="test_activity_title">Test</string>
    <string name="percentage"><xliff:g id="percentage">%s%%</xliff:g></string>
    <string name="test_result">Test result</string>
    <string name="new_test_btn">New test!</string>
    <string name="home_btn">Home</string>
    <string name="word">Word</string>
    <string name="percent_total">\u0025 total</string>
    <string name="percentage_last_5">\u0025 last 5</string>
    <string name="btn_finish">Finish</string>
</resources>
