<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.chrismsolutions.chrismdefinitions.MainActivity">

    <item android:id="@+id/searchFolder"
        android:icon="@mipmap/ic_search_white_24dp"
        android:title="@string/search_word"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:visible="false"
        />

    <item
        android:id="@+id/action_create_test"
        android:orderInCategory="101"
        android:title="@string/menu_create_test"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/remove_ads"
        android:orderInCategory="102"
        android:title="@string/remove_ads"
        android:onClick="removeAds"
        android:visible="false"
        />
</menu>
