<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_test_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_folder_test"
        android:textSize="20sp"
        android:padding="4dp"
        android:textColor="@color/colorPrimaryText"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:id="@+id/folder_list_create_test"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_test_number_start"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=" ### "
            android:id="@+id/create_test_edit_number"
            android:inputType="number"
            android:textSize="18sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_test_number_middle"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 300"
            android:id="@+id/create_test_total_words"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_test"
        android:background="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:layout_margin="8dp"
        android:id="@+id/create_test_btn"
        android:onClick="btnStartTest"
        />

</LinearLayout>