<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_folder_black_24dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/folder"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:text="Example folder"
            android:textSize="24sp"
            android:id="@+id/folder_name"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_edit_black_24dp"
            android:layout_gravity="bottom|end"
            android:id="@+id/edit_folder"
            android:contentDescription="@string/edit_folder_header"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/ic_delete_black_24dp"
            android:layout_gravity="bottom|end"
            android:id="@+id/delete_folder"
            android:contentDescription="@string/delete"
            />
</LinearLayout>